<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/stelmos"
        android:contentDescription="@string/contentdescription"/>

    <Button
        android:text="@string/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="20dp"
        android:fontFamily="sans-serif"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:background="#191919"
        android:theme="@android:style/Theme.Holo"/>

    <TextView
        android:id="@+id/title"
        android:text="@string/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif"
        android:textColor="@android:color/white"
        android:textSize="36sp" />

    <TextView
        android:text="@string/since"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:layout_below="@id/title" />

    <TextView
        android:id="@+id/address"
        android:text="@string/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="24sp"
        android:fontFamily="sans-serif-light"
        android:textColor="@android:color/white"
        android:layout_above="@id/city"/>

    <TextView
        android:id="@+id/city"
        android:text="@string/indy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="24sp"
        android:fontFamily="sans-serif-light"
        android:textColor="@android:color/white"
        android:layout_above="@id/contact"/>

    <TextView
        android:id="@+id/contact"
        android:text="@string/contactinfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="24sp"
        android:fontFamily="sans-serif-light"
        android:textColor="@android:color/white"
        android:layout_alignParentBottom="true" />

</RelativeLayout>
